Refactor decision-making algorithms to return AlgorithmDetails and enforce winnerIndex validation